--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,9 @@
               <if condition="item.value.asset === 'graphic-name.html'">
                 <include src="graphic-name.html"></include>
               </if>
+              <if condition="item.value.asset === 'map.html'">
+                <include src="map.html"></include>
+              </if>
             </div>
           </case>
         </switch>
